--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,15 @@
+body {
+    background-color: #0c0c0a;
+    min-height: 1000px;
+}
 
+.main {
+    /* background:  */
+     background-image: url("../images/vader-stormtrooper-bg.jpg");
+     background-repeat:no-repeat;
+     background-size: 100% 750px;
+     min-height: 1000px;
+}
 
 .content-box {
     background-color:darkslategray;
