--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,23 +6,17 @@ body {
 .header {
     height: 10%;
     background-color: white;
+    text-align: center;
 }
+
 .header p {
     text-align: center;
 }
 
-#header-logo {
-    height: 7%;
-    width: 7%;
-    float: left;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#header-title {
-    text-align: center;
-    padding-top: 2%;
-    padding-bottom: 2%;
+#logo {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 100px;
 }
 
 .main {
